--- a/menu/HotelDinesh.html
+++ b/menu/HotelDinesh.html
@@ -65,7 +65,7 @@
 							 <li><a href="/index.html#team" class="smoothScroll" style="color: #575757;">Team</a></li>
 							 <li><a href="#menu" class="smoothScroll" style="color: #575757;">Menu</a></li>	
 							 <li><a href="/index.html#menu" class="smoothScroll" style="color: #575757;">Partners</a></li>
-                     <a href="#contact" class="section-btn">Order Now! <i class="fa fa-phone"></i> 73 300 300 45</a>
+                     <a href="#contact" class="section-btn">Order Now! <i class="fa fa-phone"></i> 00 00 00 00 00</a>
                 </ul>
             </div>
 
@@ -167,7 +167,7 @@
                                 <h2 class="wow fadeInUp" data-wow-delay="0.2s">Order On</h2>
                             </div>
                             <address class="wow fadeInUp" data-wow-delay="0.4s">
-                                <p>73 300 300 45</p>
+                                <p>00 00 00 00 00</p>
                                 <p><a href="mailto:info@company.com"></a></p>
                                 <p></p>
                             </address>
