--- a/menu/AmarBakery.html
+++ b/menu/AmarBakery.html
@@ -61,7 +61,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                      <li><a href="/index.html#home" class="smoothScroll" style="color: #575757;">Home</a></li>
-							 <li><a href="/TeamApurva/index.html#about" class="smoothScroll" style="color: #575757;">About</a></li>
+							 <li><a href="/index.html#about" class="smoothScroll" style="color: #575757;">About</a></li>
 							 <li><a href="/index.html#team" class="smoothScroll" style="color: #575757;">Team</a></li>
 							 <li><a href="#menu" class="smoothScroll" style="color: #575757;">Menu</a></li>	
 							 <li><a href="/index.html#menu" class="smoothScroll" style="color: #575757;">Partners</a></li>
