--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                     <div class="col-md-4 col-sm-4">
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.2s">
-                              <img src="images/team-image4.jpg" class="img-responsive" alt="">
+                              <img src="images/po.svg" class="img-responsive" alt="">
                                    <div class="team-hover">
                                         <div class="team-item">
                                              <h4>Your Description</h4> 
@@ -182,7 +182,7 @@
 
                     <div class="col-md-4 col-sm-4">
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
-                              <img src="images/team-image8.jpg" class="img-responsive" alt="">
+                              <img src="images/appu.svg" class="img-responsive" alt="">
                                    <div class="team-hover">
                                         <div class="team-item">
                                              <h4>Your description</h4>
@@ -201,7 +201,7 @@
 
                     <div class="col-md-4 col-sm-4">
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.6s">
-                              <img src="images/team-image7.jpg" class="img-responsive" alt="">
+                              <img src="images/alexd.svg" class="img-responsive" alt="">
                                    <div class="team-hover">
                                         <div class="team-item">
                                              <h4>Your Description</h4>
